SAK-46525 - Dark mode / signup color contrast issues

--- a/signup/tool/src/webapp/css/signupStyle.css
+++ b/signup/tool/src/webapp/css/signupStyle.css
@@ -16,7 +16,6 @@ table.signupTable {
 }
 
 table.signupTable th {
-	background-color: #ddd;
 	padding: .3em 1em;
 }
 
@@ -41,7 +40,6 @@ table.signupTable td.titleCol{
 
 
 table.userDefineTsTable th {
-	background-color: #ddd;
 }
 
 .titleColumn {
@@ -259,7 +257,6 @@ table.organizer td {
 .greyed_mi{
 	vertical-align: top;
 	margin-left: 30px;
-	background: #e7eef5;
 	width: 350px;
 	color:#A3A3A3;
 }
